--- a/src/input/style.css
+++ b/src/input/style.css
@@ -1,4 +1,3 @@
-
 .react-tel-input .selected-flag {
   width: 60px;
   height: 100%;
@@ -15,12 +14,10 @@
   height: 10rem !important;
 }
 
-
 .react-tel-input ::placeholder {
   color: #a4a4a4 !important;
   font-size: 14px;
 }
-
 
 .country-list::-webkit-scrollbar {
   width: 10px !important;
@@ -33,7 +30,7 @@
   border-radius: 20px !important;
   border: solid 12px transparent !important;
 }
-*/ .country-list::-webkit-scrollbar-corner {
+.country-list::-webkit-scrollbar-corner {
   background-color: grey;
 }
 
